# clic

./: Cargo.toml  README.org
.github/workflows/: release.yaml
doc/examples/: bc-err.spec  bc.spec
src/: args.rs  cmdline.rs  err.rs  lib.rs  main.rs  phrases.rs  runner.rs
src/spec/: mod.rs  parser.rs  runner.rs
tests/: clitest.rs  selftest-runner.rs
tests/clitest/: bc.spec
tests/selftest/: calc01.spec  calc02.spec  exitcode01.spec  exitcode02.spec  exitcode02.stderr  timeout.spec  timeout.stderr
