[package]
name = "clic"
version = "0.1.0"
description = "CLI Checker"
authors = ["j-keck <jhyphenkeck@gmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3.1", features = [ "paw" ] }
structopt-derive = "0.3.1"
paw = "1.0.0"
timeout-readwrite = "0.2.1"
humantime = "1.3.0"
log = "0.4.8"
xstd = { git = "file:///home/j/prj/priv/xstd-rs" }
