[package]
name = "clic"
version = "0.1.0"
description = "CLI Checker"
authors = ["j-keck <jhyphenkeck@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
humantime = "1.3.0"
log = "0.4.8"
paw = "1.0.0"
structopt-derive = "0.3.1"
structopt = { version = "0.3.1", features = [ "paw" ] }
timeout-readwrite = "0.2.1"
xstd = "0.1"
